--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
             </div>
             <div class="whiteLine"></div>
             <div class="credit">
-                <p>© Todos os direitos reservados 2023 | Desenvolvido por <a href="#">Dilley Andrade</a></p>
+                <p>2024© Todos os direitos reservados | Desenvolvido por <a href="www.dilleyandrade.com" target="_blank">Dilley Andrade</a></p>
             </div>
         </div>
     </footer>
