Add details to site

--- a/index.html
+++ b/index.html
@@ -468,13 +468,13 @@
                         <div class="serviceType">
                             <img src="assets/img/servicetype7.png" alt="Tipo de serviço 7">
                             <strong>Autoestima</strong>
-                            <p>Aprenda a reconhecer o seu valor como pessoa e amar a si mesma..</p>
+                            <p>Aprenda a reconhecer o seu valor como pessoa e amar a si mesma.</p>
                         </div>
 
                         <div class="serviceType">
                             <img src="assets/img/servicetype8.png" alt="Tipo de serviço 8">
                             <strong>Mindfulness</strong>
-                            <p>A atenção plea promove a redução do estresse e aumento da consciência emocional.</p>
+                            <p>A atenção plena promove a redução do estresse e aumento da consciência emocional.</p>
                         </div>
                     </div>
                     <div class="button">
@@ -783,8 +783,21 @@
                 <div class="newslatters">
                     <h3>Newslatters</h3>
                     <p>Assine nossas newsletters para receber as atualizações mais recentes.</p>
-                    <form>
-                        <input type="text" placeholder="Informe seu email">
+                    <form 
+                        action="https://gmail.us8.list-manage.com/subscribe/post?u=6cf3e98de294e923ee57d96c9&amp;id=5112205975&amp;f_id=007a77e0f0" 
+                        method="post"
+                        updateid="mc-embedded-subscribe-form" 
+                        name="mc-embedded-subscribe-form" 
+                        class="validate" 
+                        target="_self"
+                    >
+                        <input type="text" name="EMAIL" placeholder="Informe seu email">
+
+                        <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                            /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+                            <input type="text" name="b_6cf3e98de294e923ee57d96c9_5112205975" tabindex="-1" value="">
+                        </div>
+
                         <button type="submit">Enviar</button>
                     </form>
                 </div>
