Site is complete

--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
                                 </nav>
                             </div>
                             <div class="navSocialMedia">
-
                                 <a href="https://www.instagram.com/ingridmariapsi?igsh=MXZicmNsamdpdmVwMA%3D%3D" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256">
                                         <path 
@@ -184,7 +183,7 @@
                                 </div>
                                 <div class="signature">
                                     <h3>Ingrid Maria</h3>
-                                    <h4>Psicóloga Clínica Crp: 02/27275</h4>
+                                    <h4>Psicóloga Clínica CRP 02/27275</h4>
                                 </div>
                             </div>
                         </div>
@@ -782,29 +781,29 @@
                 </div>
                 <div class="newslatters">
                     <h3>Newslatters</h3>
-                    <p>Assine nossas newsletters para receber as atualizações mais recentes.</p>
+                    <p>Cadastre seu email para receber dicas e as novidades mais recentes.</p>
+
                     <form 
                         action="https://gmail.us8.list-manage.com/subscribe/post?u=6cf3e98de294e923ee57d96c9&amp;id=5112205975&amp;f_id=007a77e0f0" 
                         method="post"
                         updateid="mc-embedded-subscribe-form" 
                         name="mc-embedded-subscribe-form" 
-                        class="validate" 
                         target="_self"
+                        class="validate" 
                     >
-                        <input type="text" name="EMAIL" placeholder="Informe seu email">
+                        <input type="email" name="EMAIL" required placeholder="Informe seu email">
 
                         <div aria-hidden="true" style="position: absolute; left: -5000px;">
                             /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
                             <input type="text" name="b_6cf3e98de294e923ee57d96c9_5112205975" tabindex="-1" value="">
                         </div>
-
-                        <button type="submit">Enviar</button>
-                    </form>
+                        <button class="buttonSubmitForm" type="submit">Cadastrar</button>
+                    </form>                    
                 </div>
             </div>
             <div class="whiteLine"></div>
             <div class="credit">
-                <p>2024© Todos os direitos reservados | Desenvolvido por <a href="www.dilleyandrade.com.br" target="_blank">Dilley Andrade</a></p>
+                <p>2024© Todos os direitos reservados | Desenvolvido por <a href="https://www.dilleyandrade.com.br" target="_blank">Dilley Andrade</a></p>
             </div>
         </div>
     </footer>
